Add raw value (where available) to tooltip for score

--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -948,11 +948,16 @@ body {
 .score-tooltip-text {
     top: -50%;
     left: 150%;
+    white-space: nowrap;
 }
 
 .missing-score-tooltip-text {
     top: -50%;
     left: 50%;
+}
+
+.raw-value-tooltip-text {
+    color: #ccc;
 }
 
 .category-axis-container {
