Use country_code as id for country

--- a/src/frontend/destination_search/templates/base.html
+++ b/src/frontend/destination_search/templates/base.html
@@ -427,7 +427,7 @@
                     data.push({
                         id: location.id,
                         text: location.text,
-                        parent: group.id  // Add a reference to the parent country
+                        parent: group.text  // Add a reference to the parent country
                     });
                 });
             });
