Incorporate countries can be previous locations

--- a/src/frontend/destination_search/templates/location_detail.html
+++ b/src/frontend/destination_search/templates/location_detail.html
@@ -140,6 +140,9 @@
                     {% for location in previous_locations %}
                         <li>{{ location }}</li>
                     {% endfor %}
+                    {% for country in previous_countries %}
+                        <li>{{ country }}</li>
+                    {% endfor %}
                     </ul>
             </div>
         </div>
