--- a/src/frontend/destination_search/templates/location_detail.html
+++ b/src/frontend/destination_search/templates/location_detail.html
@@ -77,7 +77,7 @@
                                             </div>
                                         {% else %}
                                             <div class="dimension-score-no-knob has-tooltip">
-                                                <span class="tooltip-text missing-score-tooltip-text">Missing</span>
+                                                <span class="tooltip-text missing-score-tooltip-text">Not available</span>
                                             </div>
                                         {% endif %}
                                     </div>
