New core_texts fields

--- a/src/frontend/destination_search/templates/location_detail.html
+++ b/src/frontend/destination_search/templates/location_detail.html
@@ -92,7 +92,10 @@
 
             <!-- Texts -->
             <div class="category-content-container">
-                <div class="text-container">{{ category.text }}</div>
+                <div class="text-container">
+                    <p>{{ category.general_text }}</p>
+                    <p>{{ category.anomaly_text }}</p>
+                </div>
             </div>
 
         </div>
