--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -88,6 +88,25 @@ body {
     margin-left: -60px; /* Use half the width to center the tooltip */
 }
 
+#compare-link {
+    position: relative;
+}
+
+#compare-count {
+    position: absolute;
+    top: 3px;
+    right: -4px;
+    background-color: var(--accent1);
+    color: white;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.6em;
+}
+
 .footer-container {
     height: fit-content;
     background-color: var(--accent2);
@@ -492,6 +511,7 @@ body {
 .location-list-item-image-container {
     border-radius: 10px;
     overflow: hidden;
+    position: relative;
 }
 
 .same-height-as-width {
@@ -508,6 +528,21 @@ body {
     width: 100%;
     height: 100%;
   }
+
+.add-to-comparison-icon {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    width: 1.4em;
+    cursor: pointer;
+}
+
+.add-to-comparison-icon img {
+    vertical-align: top;
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
 
 .location-list-item-info-container {
     display: flex;
