--- a/src/frontend/destination_search/templates/location_detail.html
+++ b/src/frontend/destination_search/templates/location_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}
 {{ location.city }}
@@ -19,6 +20,7 @@
                     <img src="https://flagsapi.com/{{ location.country_code }}/flat/24.png" alt="{{ location.country }} flag">
                 </div>
             </div>
+            <div class="add-to-comparison-icon add-to-comparison-icon-detailpage" data-location-id="{{ location.location_id }}"><img src="{% static 'images/comparison_icon.svg' %}" alt="Select for comparison"></div> 
         </div>
         <div class="tabs">
             {% for category in data %}
