--- a/src/frontend/destination_search/templates/list.html
+++ b/src/frontend/destination_search/templates/list.html
@@ -196,7 +196,11 @@ Results
                     <a href="{% url 'location_detail' location_id=location.location_id %}?{{ query_parameters }}">
                         <img src="{% static '' %}images/location_images/thumbnails/{{ location.location_id }}.jpg" alt="{{ location.city }} image">
                     </a>
-                    <div class="add-to-comparison-icon" data-location-id="{{ location.location_id }}"><img src="{% static 'images/comparison_icon.svg' %}" alt="Select for comparison"></div> 
+                    <div class="add-to-comparison-icon-container">
+                        <div class="add-to-comparison-icon" data-location-id="{{ location.location_id }}">
+                            <img src="{% static 'images/comparison_icon.svg' %}" alt="Select for comparison">
+                        </div>
+                    </div>
                 </div>
                 <div class="location-list-item-info-general">
                     <div class="location-list-item-title">
@@ -240,7 +244,11 @@ Results
                     <a href="{% url 'location_detail' location_id=location.location_id %}?{{ query_parameters }}">
                         <img src="{% static '' %}images/location_images/thumbnails/{{ location.location_id }}.jpg" alt="{{ location.city }} image">
                     </a>
-                    <div class="add-to-comparison-icon" data-location-id="{{ location.location_id }}"><img src="{% static 'images/comparison_icon.svg' %}" alt="Select for comparison"></div> 
+                    <div class="add-to-comparison-icon-container">
+                        <div class="add-to-comparison-icon" data-location-id="{{ location.location_id }}">
+                            <img src="{% static 'images/comparison_icon.svg' %}" alt="Select for comparison">
+                        </div>
+                    </div>
                 </div>
                 
                 <div class="location-list-item-info-container">
