--- a/src/frontend/destination_search/templates/base.html
+++ b/src/frontend/destination_search/templates/base.html
@@ -530,7 +530,8 @@
             } else {
                 tooltipText.textContent = "Add to comparison";
             }
-
+            
+            // Icon event listener
             icon.addEventListener('click', function() {
                 if (this.classList.contains('selected')) {
                     this.classList.remove('selected');
