Reference start location + airport

--- a/src/frontend/destination_search/templates/location_detail.html
+++ b/src/frontend/destination_search/templates/location_detail.html
@@ -50,7 +50,7 @@
         <div class="categeory-first-row">
 
             <!-- Scores -->
-            {% if category.category_name != "General" %}
+            {% if category.category_id != 0 %}
             <div class="category-content-container">
                 <div class="dimensions-figure-wrapper">
                     <div class="dimensions-figure">
@@ -99,6 +99,17 @@
             <!-- Texts -->
             <div class="category-content-container">
                 <div class="text-container">
+                    {% if category.category_id ==  6 %}
+                        <p>
+                            {% if start_location %}
+                                You inputted {{ start_location}} as your start location.
+                                We used our closest reference start location {{ reference_start_location.city }}, {{ reference_start_location.country }} to compute the reachability.
+                            {% else %}
+                                We used {{ reference_start_location.city }}, {{ reference_start_location.country }} as start location to compute the reachability.
+                            {% endif %}
+                            For flights, we consider {{ reference_start_airport.airport_name }} ({{ reference_start_airport.iata_code }}) as origin airport.
+                        </p>
+                    {% endif %}
                     <p>{% if category.text_general %}{{ category.text_general }}{% endif %}</p>
                     <p>{% if category.text_anomaly %}{{ category.text_anomaly }}{% endif %}</p>
                 </div>
