--- a/src/frontend/destination_search/destinations/static/css/styles.css
+++ b/src/frontend/destination_search/destinations/static/css/styles.css
@@ -944,7 +944,7 @@ body {
 
 .dimensions-figure-wrapper {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: 0;
